# openepub

./: README.md  pyproject.toml
src/openepub/: __init__.py  common.py  exceptions.py
src/openepub/epub/: epub.py  item.py  package.py
test/: test_common.py  test_epub.py
test/mock/: hola_drm.epub  hola_multiencoding_match.epub  hola_multiline.epub  hola_nonutf.epub  prj_gb_five_selected_short_stories_farsi.epub  prj_gb_five_selected_short_stories_farsi.txt  prj_gb_romeo_and_juliet.epub  prj_gb_romeo_and_juliet.txt
